--- a/home.css
+++ b/home.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    height: 95vh;
+    margin: 0;
+    padding: 0;
+    background-image: url(puwan.png.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: contain;
+}
