--- a/style.css
+++ b/style.css
@@ -3,16 +3,19 @@
     padding: 0;
 box-sizing: border-box;
 }
+main{
+    height: 680px;
+    
+    background: #0B1D51;
+}
 .one{
     display: flex;
     justify-content: left;
     color: black;
-}
-
-.one{
-    margin-top: 0;
+    background: red;
+     margin-top: 0;
     height: 0;
-    width: 200px;
+    width: 230px;
 }
 .one h4{
     margin-top: 33px;
@@ -20,7 +23,7 @@ box-sizing: border-box;
 nav{
     padding-top: 0;
     margin-top: 0;
-    position: relative;
+    /* position: relative; */
     margin-left: 300px;
     /* padding-right: 25px; */
     background: #447D9B;
@@ -32,7 +35,7 @@ nav{
     height: 34px;
 }
 nav ul{
-    padding-top: 5px;
+    padding-top: 24px;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -48,25 +51,19 @@ nav ul a{
 }
 
 
-.c:hover{
-    /* background: red; */
-    /* color: blue; */
+.link:hover{
+    
     font-weight: 700;
-    /* color: chartreuse; */
+    
+}
 
+.one h4{
+    
+    text-transform: uppercase;
+    
 }
-.s:hover{
-    font-weight: 700;
+main img{
+    height: 400px;
+    width: 380px;
+    
 }
-.a:hover{
-    font-weight: 700;
-}
-.h:hover{
-    font-weight: 700;
-}
-/* .color:hover{
-    background-color: rgb(211, 67, 202);
-    cursor: pointer;
-    height: 50px;
-    width: 100px;
-} */
