updation in code

--- a/style.css
+++ b/style.css
@@ -102,3 +102,17 @@ footer img{
     width: 24px;
     height: 28px;
 }
+article{
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 rgba(0, 0, 0, 0.1);
+
+}
+h2{
+    color: #333;
+
+}
+p{
+    color: #555;
+}
