change in lay-out

--- a/home.css
+++ b/home.css
@@ -17,3 +17,22 @@ blockquote{
   align-items: end;
   display: contents;
 }
+
+article{
+  display: block;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 rgba(0, 0, 0, 0.1);
+    position: relative;
+    padding-bottom: 80px;
+    margin-bottom: 80px;
+   place-content: bottom;
+}
+h2{
+    color: #333;
+
+}
+p{
+    color: #555;
+}
