--- a/style.css
+++ b/style.css
@@ -98,7 +98,23 @@ footer img{
   padding: 10px;
 }
 
-.facebook-logo img{
-    width: 24px;
-    height: 28px;
+.footer{
+    margin: 80px 0 10px;
+    text-align: center;
+}
+.footer a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 22px;
+    margin: 0 10px;
+}
+.footer hr{
+    background: #999;
+    height:1px ;
+    width: 100%;
+    border: 0;
+    margin: 20px 0;
+}
+.footer p{
+    padding-bottom: 15px;
 }
