Update index.html and style.css

--- a/style.css
+++ b/style.css
@@ -118,3 +118,12 @@ footer img{
 .footer p{
     padding-bottom: 15px;
 }
+
+nav .fa-bars{
+    display: block;
+    position: fixed;
+    top: 4%;
+    right: 7%;
+    color: #999;
+    font-size: 28px;
+}
