--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ main {
 .photo img {
   max-width: 100%;
   height: auto;
+  
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
@@ -102,4 +103,8 @@ footer {
     flex-direction: column;
     align-items: flex-start;
   }
+}
+.sci div{
+  align-items: center;
+  margin-top: 12px;
 }
